Added github buttons to sharing. Show complete posts on index, no excerpts. Various minor colour changes.

--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -16,7 +16,7 @@ $article-border: #eeeeee !default;
 $header-bg: #FFF !default;
 $header-border: lighten($header-bg, 15) !default;
 $title-color: #111 !default;
-$subtitle-color: red !default;
+$subtitle-color: #8A9B0F !default;
 
 $text-color: #222 !default;
 $text-color-light: #aaa !default;
