--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -26,8 +26,8 @@ $header-padding-bottom: 0.5em !default;
   clear: left;
   margin: 0;
   padding: 0 $pad-medium 1px;
-  background-color: lighten($sidebar-bg, 2);
-  border-top: 1px solid lighten($sidebar-border, 4);
+  /*background-color: lighten($sidebar-bg, 2);*/
+  /*border-top: 1px solid lighten($sidebar-border, 4);*/
   section {
     &.odd, &.even { float: left; width: 48%; }
     &.odd { margin-left: 0; }
@@ -98,7 +98,7 @@ aside.sidebar {
   float: none;
   padding: 0 $pad-min 1px;
   background-color: lighten($sidebar-bg, 2);
-  border-top: 1px solid $sidebar-border;
+  /*border-top: 1px solid $sidebar-border;*/
   @extend .group;
 }
 
