--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -84,6 +84,10 @@ article {
       clear: both;
       overflow: hidden;
     }
+    p.prev-next {
+    	font-size: 1.1em;
+    	margin-top: 1.5em;
+    }
     .byline + time:before, time +time:before, .comments:before, .byline ~ .categories:before {
       @extend .separator;
     }
