footer, navigation, bigger buttons, githubbish codestyle

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -105,7 +105,7 @@ article + article {
   article header { background: none; padding-bottom: 0; }
   article h1 {
     font-size: 1.8em;
-    a { color: inherit; &:hover { color: darken($link-color-hover, 20); } }
+    a {  color: darken($link-color-hover, 20); &:hover { color: darken($link-color-hover, 10); text-decoration: none; } }
   }
   a[rel=full-article] {
     background: darken($main-bg, 5);
