--- a/sass/base/_solarized.scss
+++ b/sass/base/_solarized.scss
@@ -5,7 +5,8 @@ $base00:          #657b83 !default; //dark gray
 $base0:           #839496 !default; //medium gray
 $base1:           #93a1a1 !default; //medium light gray
 $base2:           #eee8d5 !default; //cream
-$base3:           #fdf6e3 !default; //white
+//$base3:           #fdf6e3 !default; //white
+$base3:           #fafafa !default; //white
 $solar-yellow:    #b58900 !default;
 $solar-orange:    #cb4b16 !default;
 $solar-red:       #dc322f !default;
@@ -40,7 +41,7 @@ $solarized: dark !default;
 
 /* non highlighted code colors */
 $pre-bg: $base03 !default;
-$pre-border: darken($base02, 5) !default;
+$pre-border: lighten($base1, 45) !default;
 $pre-color: $base1 !default;
 
 
