--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -16,7 +16,7 @@ $article-border: #eeeeee !default;
 $header-bg: #FFF !default;
 $header-border: lighten($header-bg, 15) !default;
 $title-color: #111 !default;
-$subtitle-color: #8A9B0F !default;
+$subtitle-color: #BD1550 !default;
 
 $text-color: #222 !default;
 $text-color-light: #aaa !default;
@@ -47,16 +47,15 @@ $sidebar-link-color-subdued: lighten($sidebar-color, 20) !default;
 $sidebar-link-color-subdued-hover: $sidebar-link-color-hover !default;
 $twitter-status-link: lighten($sidebar-link-color-subdued, 15) !default;
 
-$footer-color: #888 !default;
+$footer-color: #111 !default;
 $footer-bg: #fff !default;
 $footer-bg-front: image-url('noise.png') !default;
 $footer-bg-back: linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11)) !default;
-$footer-color: darken($footer-bg, 38) !default;
 $footer-color-hover: darken($footer-color, 10) !default;
 $footer-border-top: lighten($footer-bg, 15) !default;
 $footer-border-bottom: darken($footer-bg, 15) !default;
-$footer-link-color: darken($footer-bg, 38) !default;
-$footer-link-color-hover: darken($footer-color, 25) !default;
+$footer-link-color: $subtitle-color !default;
+$footer-link-color-hover: lighten($footer-link-color, 15) !default;
 $page-border-bottom: darken($footer-bg, 5) !default;
 
 
@@ -68,14 +67,12 @@ a {
 aside.sidebar a {
   @include link-colors($sidebar-link-color, $hover: $sidebar-link-color-hover, $focus: $sidebar-link-color-hover, $active: $sidebar-link-color-active);
 }
-a {
-  @include transition(color .1s);
-}
 
 html {
   background: $page-bg top left;
 }
 body {
+	background-image: image-url('noise.png');
   > div {
     background: $sidebar-bg;
     border-bottom: 1px solid $page-border-bottom;
